force-app/main/default/objects/AIInsight__c/AIInsight__c.object-meta.xml
<CustomObject>
    <label>AI Insight</label>
    <pluralLabel>AI Insights</pluralLabel>
    <nameField>
        <label>AI Insight Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>