force-app/main/default/objects/AIInsight__c/fields/ComplianceNotes__c.field-meta.xml
<CustomField>
    <fullName>ComplianceNotes__c</fullName>
    <label>Compliance Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>