force-app/main/default/objects/AIInsight__c/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>