force-app/main/default/objects/AIInsight__c/fields/GeneratedClause__c.field-meta.xml
<CustomField>
    <fullName>GeneratedClause__c</fullName>
    <label>Generated Clause</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>