force-app/main/default/objects/AIInsight__c/fields/ModelUsed__c.field-meta.xml
<CustomField>
    <fullName>ModelUsed__c</fullName>
    <label>Model Used</label>
    <type>Text</type>
    <length>255</length>
</CustomField>