force-app/main/default/objects/AIInsight__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>