force-app/main/default/objects/AIInsight__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <label>Reasoning</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>